--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "native-base": "^0.5.4",
     "react": "15.2.1",
-     "react-native-fbsdk": "^0.3.0",
-    "react-native": "0.31.0"
+    "react-native": "0.31.0",
+    "react-native-fbsdk": "^0.3.0",
+    "react-native-vector-icons": "^2.0.3"
   }
 }
